# advent-of-code-2022

./: README.md
1/: part1.rs  part2.rs
2/: part1.rs  part2.rs
3/: part1.rs  part2.rs
4/: part1.rs  part2.rs
day05/: Cargo.toml  README.md
day05/src/part1/: main.rs
day05/src/part2/: main.rs
day06/: Cargo.toml
day06/src/part1/: main.rs
day06/src/part2/: main.rs
day4/: Cargo.toml  README.md
day4/src/part1/: main.rs
day4/src/part2/: main.rs
